# SmartSearch

./: README.md  clean_code_cheat_sheet.md  functional_programming.py  install.sh  pyproject.toml
.github/workflows/: build.yml  tests.yml
src/: main.py
src/matchers/: __init__.py  base.py  boyer_moore.py  naive.py
test/: base.py  test_boyer_moore_matcher.py  test_naive_matcher.py
uml/: class_diagram.pml  component_diagram.pml  sequence_diagram.pml
