[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartsearch"
version = "0.1.0"
description = "A Python project for smart search applications."
authors = [
    { name = "Bogdan Kosticć" }
]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest>=5.2"
]
